--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
     "date-fns": "^3.6.0",
     "firebase": "^10.13.0",
     "firebase-admin": "^12.4.0",
+    "formidable": "^3.5.2",
     "gapi-script": "^1.2.0",
     "googleapis": "^142.0.0",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.11.0",
     "next": "14.2.5",
+    "next-connect": "^1.0.0",
     "nodemailer": "^6.9.14",
     "react": "^18",
     "react-dom": "^18",
